--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -67,6 +67,8 @@
       // С сервера ВСЕГДА должна передаваться РАЗНИЦА во времени - что бы корректно работали скрипты при навигации вперед-назад по страницам в браузерах!
       var timeDiff = parseInt('{D_SN_CLIENT_TIME_DIFF}') ? parseInt('{D_SN_CLIENT_TIME_DIFF}') : false;
 
+      /*global SN_TIME_NOW:true*/
+      /*eslint no-undef: "error"*/
       var SN_TIME_NOW = parseInt('{D_SN_TIME_NOW}') ? parseInt('{D_SN_TIME_NOW}') : (round(timeBrowser.valueOf() / 1000));
 
       var timeTimerStart = timeBrowser;
@@ -88,12 +90,6 @@
 
       var dpath = '{dpath}';
       var SN_GOOGLE = parseInt('{SN_GOOGLE}') ? 1 : 0;
-
-      var FONT_SIZE_PERCENT_MIN = parseFloat('{D_FONT_SIZE_PERCENT_MIN}');
-      var FONT_SIZE_PERCENT_DEFAULT = parseFloat('{D_FONT_SIZE_PERCENT_DEFAULT}');
-      var FONT_SIZE_PERCENT_MAX = parseFloat('{D_FONT_SIZE_PERCENT_MAX}');
-      var FONT_SIZE_PERCENT_STEP = parseFloat('{D_FONT_SIZE_PERCENT_STEP}');
-      var FONT_SIZE = parseFloat('{FONT_SIZE}');
     </script>
 
     <!-- IF FONT_SIZE != FONT_SIZE_PERCENT_DEFAULT_STRING -->
@@ -135,6 +131,21 @@
     <!-- END javascript -->
 
     <script type="text/javascript">
+      /*global snFont:true*/
+      /*eslint no-undef: "error"*/
+//      var FONT_SIZE_PERCENT_MIN = Math.floatVal('{D_FONT_SIZE_PERCENT_MIN}');
+//      var FONT_SIZE_PERCENT_DEFAULT = Math.floatVal('{D_FONT_SIZE_PERCENT_DEFAULT}');
+//      var FONT_SIZE_PERCENT_MAX = Math.floatVal('{D_FONT_SIZE_PERCENT_MAX}');
+//      var FONT_SIZE_PERCENT_STEP = Math.floatVal('{D_FONT_SIZE_PERCENT_STEP}');
+//      var FONT_SIZE = Math.floatVal('{FONT_SIZE}');
+      var snFont = {
+        min: Math.floatVal('{D_FONT_SIZE_PERCENT_MIN}'),
+        max: Math.floatVal('{D_FONT_SIZE_PERCENT_MAX}'),
+        step: Math.floatVal('{D_FONT_SIZE_PERCENT_STEP}'),
+        sizeDefaultPercent: Math.floatVal('{D_FONT_SIZE_PERCENT_DEFAULT}'),
+        size: Math.floatVal('{FONT_SIZE}')
+      };
+
       $.extend(language, {
         sys_confirm: '{LA_sys_confirm}',
         sys_cancel: '{LA_sys_cancel}',
