--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -399,13 +399,13 @@ input[type=text].coordinate {
 }
 
 .i_icon_visible {
-  background-image: url(../../images/icon_eye_visible.png);
+  background-image: url("/design/images/icon_eye_visible.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .i_icon_invisible {
-  background-image: url(../../images/icon_eye_invisible.png);
+  background-image: url("/design/images/icon_eye_invisible.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -2191,10 +2191,10 @@ body:not(.no_border_image) .border_image_large
 
   border-width: 2.181818181818em 1em 2.272727272727em 2.272727272727em;
 
-  -moz-border-image:    url("../../../design/images/border.png") 24 11 25 25 round round;
-  -o-border-image:      url("../../../design/images/border.png") 24 11 25 25 round round;
-  -webkit-border-image: url("../../../design/images/border.png") 24 11 25 25 round round;
-  border-image:         url("../../../design/images/border.png") 24 11 25 25 round round;
+  -moz-border-image:    url("/design/images/border.png") 24 11 25 25 round round;
+  -o-border-image:      url("/design/images/border.png") 24 11 25 25 round round;
+  -webkit-border-image: url("/design/images/border.png") 24 11 25 25 round round;
+  border-image:         url("/design/images/border.png") 24 11 25 25 round round;
 }
 
 body:not(.no_border_image) .border_image_small, body:not(.no_border_image) .ui-dialog
@@ -2204,10 +2204,10 @@ body:not(.no_border_image) .border_image_small, body:not(.no_border_image) .ui-d
 
   border-width: 1em 1em 1em 1em;
 
-  -moz-border-image:    url("../../../design/images/border_small.png") 11 11 11 11 round round;
-  -o-border-image:      url("../../../design/images/border_small.png") 11 11 11 11 round round;
-  -webkit-border-image: url("../../../design/images/border_small.png") 11 11 11 11 round round;
-  border-image:         url("../../../design/images/border_small.png") 11 11 11 11 round round;
+  -moz-border-image:    url("/design/images/border_small.png") 11 11 11 11 round round;
+  -o-border-image:      url("/design/images/border_small.png") 11 11 11 11 round round;
+  -webkit-border-image: url("/design/images/border_small.png") 11 11 11 11 round round;
+  border-image:         url("/design/images/border_small.png") 11 11 11 11 round round;
 }
 
 
@@ -2819,10 +2819,10 @@ body:not(.no_border_image) [table_title]:before {
   color: #9900ff;
 }
 .birthday:before {
-  content: url(../../images/birthday.png);
+  content: url("/design/images/birthday.png");
 }
 .vacation:before { /* Replaces .birthday ! */
-  content: url(../../images/icon_vacation.png);
+  content: url("/design/images/icon_vacation.png");
 }
 .vacation {
   color: cyan;
