--- a/design/css/blitz_login_background.css
+++ b/design/css/blitz_login_background.css
@@ -59,7 +59,7 @@ and (min-width : 1224px) {
   /* Styles */
   body 
   {
-      background-image: url(../images/blitz_bg-unauthorized.jpg);
+      background-image: url(/design/images/blitz_bg-unauthorized.jpg);
       background-repeat: no-repeat;
       background-size: 100% auto ;
     background-position: bottom 0px right 0px;
@@ -72,7 +72,7 @@ and (min-width : 1824px) {
   /* Styles */
   body 
   {
-      background-image: url(../images/blitz_bg-unauthorized.jpg);
+      background-image: url(/design/images/blitz_bg-unauthorized.jpg);
       background-repeat: no-repeat;
       background-size: 100% auto ;
     background-position: bottom 0px right 0px;
