--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -45,18 +45,11 @@
     <script type="text/javascript">
       // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
       var timeBrowser = new Date();
-    </script>
+      var timeTimerStart = timeBrowser;
 
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
-    <script type="text/javascript">
-      var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
-      var PLAYER_OPTION_ANIMATION_DISABLED = parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') ? parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') : 0;
-      var PLAYER_OPTION_PROGRESS_BARS_DISABLED = parseInt('{PLAYER_OPTION_PROGRESS_BARS_DISABLED}') ? parseInt('{PLAYER_OPTION_PROGRESS_BARS_DISABLED}') : 0;
-      var SN_ROOT_VIRTUAL = '{D_SN_ROOT_VIRTUAL}';
-      var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
-
-      jQuery.fx.off = PLAYER_OPTION_ANIMATION_DISABLED;
-
+      /*global SN_TIME_NOW:true*/
+      /*eslint no-undef: "error"*/
+      var SN_TIME_NOW = parseInt('{D_SN_TIME_NOW}') ? parseInt('{D_SN_TIME_NOW}') : (round(timeBrowser.valueOf() / 1000));
       // Корректировка по времени запроса - если доступно
       // var timeBrowser = window.performance ? timeBrowser = new Date(window.performance.timing.requestStart) : new Date();
       // var timeBrowser = window.performance ? timeBrowser = new Date(window.performance.timing.responseStart) : new Date();
@@ -64,21 +57,26 @@
       // С сервера ВСЕГДА должна передаваться РАЗНИЦА во времени - что бы корректно работали скрипты при навигации вперед-назад по страницам в браузерах!
       var timeDiff = parseInt('{D_SN_CLIENT_TIME_DIFF}') ? parseInt('{D_SN_CLIENT_TIME_DIFF}') : false;
 
-      /*global SN_TIME_NOW:true*/
-      /*eslint no-undef: "error"*/
-      var SN_TIME_NOW = parseInt('{D_SN_TIME_NOW}') ? parseInt('{D_SN_TIME_NOW}') : (round(timeBrowser.valueOf() / 1000));
-
-      var timeTimerStart = timeBrowser;
-
-      if(parseInt('{TIME_DIFF_MEASURE}') || timeDiff === false) {
-        timeDiff = 0;
-        jQuery.post("time_probe.php", {'timeBrowser': timeBrowser.valueOf(), 'utc_offset': -timeBrowser.getTimezoneOffset() * 60, 'client_gmt': timeBrowser.toUTCString()}, function(data) {
-          timeDiff = parseInt(data);
-        });
-      }
-
+      var SN_ROOT_VIRTUAL = '{D_SN_ROOT_VIRTUAL}';
+      var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
       var dpath = '{dpath}';
+
       var SN_GOOGLE = parseInt('{SN_GOOGLE}') ? 1 : 0;
+    </script>
+
+    <!-- BEGIN js -->
+      <!-- IF js.CONTENT -->
+        <script type="text/javascript">{js.CONTENT}</script>
+      <!-- ELSEIF js.FILE -->
+        <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}{js.FILE}?{C_var_db_update}"></script>
+      <!-- ENDIF -->
+    <!-- END js -->
+
+
+    <script type="text/javascript">
+      var SN_SOUND_ENABLED = Math.intVal('{SOUND_ENABLED}');
+      var PLAYER_OPTION_ANIMATION_DISABLED = Math.intVal('{PLAYER_OPTION_ANIMATION_DISABLED}');
+      var PLAYER_OPTION_PROGRESS_BARS_DISABLED = Math.intVal('{PLAYER_OPTION_PROGRESS_BARS_DISABLED}');
     </script>
 
     <!-- IF FONT_SIZE != FONT_SIZE_PERCENT_DEFAULT_STRING -->
@@ -101,23 +99,16 @@
       var HIGHSPOT_GATHER = "{HIGHSPOT_GATHER}";
     </script>
 
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery-ui.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/ion.sound.min.js?{C_var_db_update}"></script>
+    <script type="text/javascript">
+      jQuery.fx.off = PLAYER_OPTION_ANIMATION_DISABLED;
 
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_global.min.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_sound.min.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_timer.min.js?{C_var_db_update}"></script>
-    <!--&lt;!&ndash; BEGIN js &ndash;&gt;-->
-      <!--<script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}{js.FILE}?{C_var_db_update}"></script>-->
-    <!--&lt;!&ndash; END js &ndash;&gt;-->
-
-    <!-- BEGIN js -->
-      <!-- IF js.CONTENT -->
-        <script type="text/javascript">{js.CONTENT}</script>
-      <!-- ELSEIF js.FILE -->
-        <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}{js.FILE}?{C_var_db_update}"></script>
-      <!-- ENDIF -->
-    <!-- END js -->
+      if(parseInt('{TIME_DIFF_MEASURE}') || timeDiff === false) {
+        timeDiff = 0;
+        jQuery.post("time_probe.php", {'timeBrowser': timeBrowser.valueOf(), 'utc_offset': -timeBrowser.getTimezoneOffset() * 60, 'client_gmt': timeBrowser.toUTCString()}, function(data) {
+          timeDiff = parseInt(data);
+        });
+      }
+    </script>
 
     <script type="text/javascript">
       /*global snFont:true*/
@@ -139,7 +130,7 @@
     </script>
 
     <!-- IF IMPERSONATING -->
-      <div style="text-align: center" class="warning">{IMPERSONATING}</div>
+    <div class="impersonate">{IMPERSONATING}</div>
     <!-- ENDIF -->
 
     <!-- IF ADV_SEO_JAVASCRIPT -->
