--- a/design/templates/OpenGame/note_list.tpl.html
+++ b/design/templates/OpenGame/note_list.tpl.html
@@ -66,7 +66,7 @@
         <!-- END !planet_type -->
       </select>
     </div>
-    <textarea id="note_text" name="note_text" cols="40" rows="5">{note.TEXT_EDIT}</textarea>
+    <textarea id="note_text" name="note_text" cols="40" rows="5" class="do-not-skin">{note.TEXT_EDIT}</textarea>
     <br />
 
     <input type="checkbox" id="note_sticky" name="note_sticky" value="1"<!-- IF note.STICKY --> checked<!-- ENDIF -->/>
