TPL-misc-41a52.109: Updated copyright

--- a/design/templates/OpenGame/_global_footer.tpl.html
+++ b/design/templates/OpenGame/_global_footer.tpl.html
@@ -1,5 +1,5 @@
           <div id="copyright">
-            Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-201</span><span>6 Go</span>rlum<br>
+            Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-{CURRENT_YEAR} Go</span>rlum<br>
             In<span>spired by X</span>Nova Ra<span>geRe<span>pac</span>k v2</span>26
           </div>
         </td>
