ECO-fix-41a9.3: Fixed wrong ships/defence characteristics on building page

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -149,12 +149,12 @@ planet = {
     resource_map: [
       <!-- BEGIN resource -->
       {
-        'shield': Math.intVal('{resource.ACTUAL_SHIELD}'),
-        'armor': Math.intVal('{resource.ACTUAL_ARMOR}'),
-        'weapon': Math.intVal('{resource.ACTUAL_WEAPON}'),
-        'speed': Math.intVal('{resource.ACTUAL_SPEED}'),
-        'consumption': Math.intVal('{resource.ACTUAL_CONSUMPTION}'),
-        'capacity': Math.intVal('{resource.ACTUAL_CAPACITY}'),
+        'shield': ('{resource.ACTUAL_SHIELD}'),
+        'armor': ('{resource.ACTUAL_ARMOR}'),
+        'weapon': ('{resource.ACTUAL_WEAPON}'),
+        'speed': ('{resource.ACTUAL_SPEED}'),
+        'consumption': ('{resource.ACTUAL_CONSUMPTION}'),
+        'capacity': ('{resource.ACTUAL_CAPACITY}'),
 
         'level': Math.floorVal('{resource.LEVEL}'),
         'sys_metal': Math.floorVal('{resource.R901}'),
