MOD-misc-41a60.9: Support for current version of core_festival

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -9,7 +9,7 @@
 <div id="navbar_container" class="{$NAVBAR_CLASS}">
   <div class="header c_c border_image_small" id="navbar">
     <!-- IF NAVBAR_PREFIX_BUTTONS -->
-    <div class="contF a50 flexW">
+    <div class="contF a50 flexW cell">
       <!-- BEGIN navbar_prefix_button -->
       <div class="navbar-festival_button">
         <a class="w100 h100" href="{navbar_prefix_button.URL_RELATIVE}" >
