TUTORIAL-feat-42a10: Introduced tutorial

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -304,6 +304,10 @@ textarea {
   text-align: left;
   justify-content: flex-start;
 }
+.contFE {
+  text-align: right;
+  justify-content: flex-end;
+}
 
 .flexW {
   flex-wrap: wrap;
@@ -368,4 +372,42 @@ body.blitz_ {
   body.blitz_ {
     background-image: url(../images/background_blitz_1920.jpg);
   }
+}
+
+.image_close {
+  width: 1.454545em;
+  height: 1.454545em;
+}
+
+#tutorial_block {
+  /*display: none;*/
+}
+#tutorial_container {
+  padding: 0.5em;
+  max-width: 40em;
+  display: inline-block;
+}
+#tutorial_header {
+  padding: 0.5em;
+  font-size: 130%;
+  border: 1px solid red;
+}
+#tutorial_text {
+  padding: 0.5em;
+  text-align: justify;
+  border: 1px solid green;
+}
+#tutorial_text_adviser {
+  float: left;
+}
+#tutorial_text::after {
+  clear: both;
+}
+#tutorial_buttons {
+  padding: 0.5em;
+  border: 1px solid white;
+}
+#tutorial_footer {
+  padding: 0.5em;
+  border: 1px solid yellow;
 }
